--- a/clase_1.ipynb
+++ b/clase_1.ipynb
@@ -6,6 +6,79 @@
    "source": [
     "# INTRODUCCIÓN A PYTHON"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hola Mundo')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Operaciones Básicas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valor 4+5\n",
+      " El valor es de: 14.0\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "5+5 #suma\n",
+    "print('valor 4+5')\n",
+    "print(f' El valor es de: {5*(2.5+3.1)/2}') #forma de mostrar en pantalla operación matemática\n",
+    "x=5*2\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Otras Operaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "2**3 #elevación\n",
+    "b=(2**3+4**2)/3\n",
+    "print(b)"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +88,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.5"
   }
  },
